fix invisible color display element styling

--- a/index.css
+++ b/index.css
@@ -375,6 +375,11 @@ select[multiple] option {
 
   & .color-display {
     flex-shrink: 0;
+
+    /* Give it body */
+    width: 1em;
+    height: 1em;
+    border-radius: .25em;
   }
 
   & span {
